man page: clean up "smoothing" section
Deleted an obsolete example, added a missing argument
and fixed a typo.

Change-Id: I8fc2f874256d7ac447baefdd216b13e9e7c0fb32
Signed-off-by: Helia Correia <helia.correia@intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -177,7 +177,6 @@ $ yokotool <devnode> set interval 0.1
 $ yokotool <devnode> set voltage-auto-range on
 $ yokotool <devnode> set measurement-mode rms
 $ yokotool <devnode> set crest-factor 3
-$ yokotool <devnode> set smoothing-factor 64
 $ yokotool <devnode> set integration-mode continuous
 .fi
 .RE
@@ -289,7 +288,7 @@ $ yokotool <devnode> smoothing ?
 
 The list of values for a smoothing property can also be displayed with \fB?\fP:
 .nf
-$ yokotool <devnode> smoothing ?
+$ yokotool <devnode> smoothing <property> ?
 .fi
 
 .nf
@@ -301,7 +300,7 @@ $ yokotool <devnode> smoothing status on
 Enable smoothing
 
 $ yokotool <devnode> smoothing type exponent
-Get smoothing type to exponential
+Set smoothing type to exponential
 
 $ yokotool <devnode> smoothing factor
 Get smoothing factor
