Update Yoko tool's man page for "integration" command
Updated the "integration" section of Yoko tool's man page
following the rework of "integration" command.

Also updated TODO list.

---

This commit is part of of a series of patches that aim at improving
the organization of integration related commands.

-----------
BIG PICTURE
-----------

WT310 power meters support below integration features:
  - commands: wait, start, stop, reset
  - properties: state, mode, timer

Our approach consists into apprehending each of these features
like an integration subcommand, and group them all under the
"integration" command.

The syntax to trigger/act on these commands/properties will be:
  - Trigger a command:
    $ yokotool <device_node> integration <wait|start|stop|reset>
  - Get the value of a property:
    $ yokotool <device_node> integration <state|mode|timer>
  - Set the value of a property:
    $ yokotool <device_node> integration <mode|timer> <value>

----
NOTE
----

This improvement is split into several commits to ease the review.
Each commit may not function properly if tested separately.

Change-Id: I1d1246c98e8f733678917b3afc28bce2e6eab934
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -177,13 +177,12 @@ $ yokotool <devnode> set interval 0.1
 $ yokotool <devnode> set voltage-auto-range on
 $ yokotool <devnode> set measurement-mode rms
 $ yokotool <devnode> set crest-factor 3
-$ yokotool <devnode> set integration-mode continuous
 .fi
 .RE
 .RE
 
 .RS
-.B integration SUBCOMMAND
+.B integration SUBCOMMAND|PROPERTY [VALUE]
 .RS
 Integration is a power meter feature to integrate active power and current in
 order to get watt-hours (Wh, energy) and ampere-hours (Ah, charge). Positive
@@ -214,13 +213,13 @@ The only way to get out of this state is to run \fBintegration reset\fP command.
 - Finally, when integration is in \fBerror\fP state, the integration block needs
 to be reset because an error occurred.
 
-The list of integration states can also be displayed with \fB?\fP:
+The list of integration states and properties can also be displayed with \fB?\fP:
 .nf
 $ yokotool <devnode> integration ?
 .fi
 
 An integration \fBtimer\fP can be used to define for how long to run the
-computations (see \fBset integration-timer\fP command). Setting the timer to
+computations (see \fBintegration timer\fP command). Setting the timer to
 \fB0\fP means running the computations forever (or until something overflows or
 integration time reaches its maximum possible value).
 
@@ -232,24 +231,33 @@ the timer fires up.
 - In \fBcontinuous\fP mode though, it just restarts, starts calculating from
 scratch, and continues this way until integration is stopped or reset.
 
-To select the integration mode, use \fBset integration-mode\fP command.
+To select the integration mode, see \fBintegration mode\fP command.
+
+The list of properties for the integration command is \fBstate\fP, \fBmode\fP and
+\fBtimer\fP. \fBstate\fP property  reflects the ongoing state of integration command,
+thus it cannot be set directly unlike \fBmode\fP and \fBtimer\fP.
+
+The list of values for an integration property can also be displayed with \fB?\fP:
+.nf
+$ yokotool <devnode> integration <property> ?
+.fi
 
 .nf
 Usage examples:
 $ yokotool <devnode> integration reset
 Reset the integration
 
-$ yokotool <devnode> set integration-mode normal
+$ yokotool <devnode> integration mode normal
 Switch to the normal (one-shot) mode
 
-$ yokotool <devnode> set integration-timer 10
+$ yokotool <devnode> integration timer 10
 Set the timer to 10 seconds
 
-$ yokotool <devnode> set update-interval 0.5
+$ yokotool <devnode> set interval 0.5
 Set data update interval to half a second
 
 $ yokotool <devnode> integration start
-Start the integraion
+Start the integration
 
 $ yokotool <devnode> read 'Wh,Ah'
 Read watt-hours and apere-hours until integration timer fires up
