--- a/README
+++ b/README
@@ -6,3 +6,11 @@ Yoko tool is a command-line tool for configuring and controlling Yokogawa WT310 
 
 For further detail, please visit https://01.org/yoko-tool.
 
+
+Code contributors
+- Artem Bityutskiy
+- Andriy Shevchenko
+- Wendy Wang
+- Erik Veijola
+- David Box
+- Helia Correia
