Support a configuration file
Support a "/home/$USER/.yokotool.conf" file containing the device model
along with the device node.

A configuration file spares users the need to specify these information
within the command-line. However, when they do so, these information
prevail over the corresponding data from the configuration file.

The configuration file format is "ini" as its syntax is easy to read
and write, and the file format is supported by the stdlib (no need
to install any extra package).

Also updated the man page, TODO file, and added a template configuration
file to be used as a basis.

Change-Id: Iedbcfef67b02b1ab16412d53dfe8891f786955e0
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

Conflicts:
	TODO

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -34,6 +34,25 @@ The first parameter must always be the device node. The only exception is when
 using \fB{-h | --help}\fP, \fB--version\fP or  \fB--list-models\fP options,
 in which case the device node becomes optional.
 
+The device model and device node parameters can be specified within
+\fB/home/$USER/.yokotool.conf\fP configuration file, which spares you the need to
+specify them from the command-line.
+
+Below is the procedure explaining how to benefit from this capability.
+
+- Yoko tool provides you with a template configuration file called
+\fB.yokotool.conf.template\fP located at the root folder of the project
+
+- \fB.yokotool.conf.template\fP is initialized with default device model and
+device node values
+
+- Copy the template file to your \fB/home/$USER/\fP folder, and rename it as
+\fB.yokotool.conf\fP:
+  $ cd yoko-tool
+  $ cp .yokotool.conf.template /home/$USER/.yokotool.conf
+
+- Edit your configuration file, update its contents if necessary and save it:
+  $ vi /home/$USER/.yokotool.conf
 
 .SH OPTIONS
 
