README and TODO updates
README - Gave the due credit to the original authors of Yoko tool
since "git blame" doesn't allow to track the past revisions/authors
anymore.

TODO - Cleaned-up the list ("read" command can already output multiple
comma separated values).

Change-Id: Ic3521344f73a9c06df20c7ecd6ce632006a305a1
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

--- a/README
+++ b/README
@@ -7,9 +7,11 @@ Yoko tool is a command-line tool for configuring and controlling Yokogawa WT310 
 For further detail, please visit https://01.org/yoko-tool.
 
 
-Code contributors
+Authors:
 - Artem Bityutskiy
 - Andriy Shevchenko
+
+Other code contributors:
 - Wendy Wang
 - Erik Veijola
 - David Box
