--- a/docs/RELEASE_NOTES
+++ b/docs/RELEASE_NOTES
@@ -1,3 +1,62 @@
+Release 1.1
+~~~~~~~~~~~
+
+yoko-tools (1.1) trusty; urgency=low
+
+1. Bug fix:
+   Remove "arg" useless parameter since it would provoke the following error:
+   TypeError: integration_wait_subcommand() takes exactly 2 arguments (1 given)
+
+2. Support a configuration file containing the device model along with the device node.
+
+   A configuration file spares users the need to specify these information within the
+   command-line. However, when they do so, these information prevail over the corresponding
+   data from the configuration file.
+
+3. Support "-m | --devmodel" command-line argument.
+
+   With "-m | --devmodel", users can specify which power meter device model they want to use.
+
+4. Check integration timer is > 0 when mode is "continuous"
+
+   Starting integration with a timer value of "0" and a mode set to "continuous" is not possible
+   anymore. Instead, users are instructed about what to do as per below message:
+   yokotool: ERROR: Please, set a timer value higher than "0" to start integration in "continuous" mode.
+
+5. Improve Error messages readability in PowerMeter.py library.
+
+   Before we would get a message like:
+     $ ./yokotool /dev/usbtmc0 read V -l 2
+     yokotool: ERROR: failed to write command "
+     *CLS" to <yokotools.transport.USBTMC object at 0x7f809de34190>: error while writing to device '/dev/usbtmc0': [Errno 9] Bad file descriptor
+
+   Now we get:
+     $ ./yokotool /dev/usbtmc0 read V -l 2
+     yokotool: ERROR: failed to write command "*CLS" to the power meter:
+     error while writing to device '/dev/usbtmc0': [Errno 9] Bad file descriptor
+
+6. Improve the organization of integration related commands.
+
+   New syntax to:
+     Trigger an integration command:
+     $ yokotool <device_node> integration <wait | start | stop | reset>
+
+     Get the value of an integration property:
+     $ yokotool <device_node> integration <state | mode | timer>
+
+     Set the value of an integration property:
+     $ yokotool <device_node> integration <mode | timer> <value>
+
+7. Improve the organization of smoothing related commands.
+
+   New syntax to:
+     Get the value of a smoothing property:
+     $ yokotool <device_node> smoothing <status | type | factor>
+
+     Set the value of a smoothing property:
+     $ yokotool <device_node> smoothing <status | type | factor> <value>
+
+
 Release 1.0
 ~~~~~~~~~~~
 
