yoko-tools release 1.2
Mentionned the update of interest for users in RELEASE_NOTES,
deb changelog and rpm changes files.

Updated version number in yokotool, rpm spec and man page files.

Change-Id: I57b931f20cb52918e9f03c4e580072e7d85a626f
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+yoko-tools (1.2) trusty; urgency=low
+
+  * Set a default value to -m | --devmodel command-line argument
+
+    It's generally a bad approach to break what worked previously and to make users re-learn how to
+    use a software. The introduction of -m | --devmodel had such an unfortunate impact on Yoko tool.
+    Reverted this behavior by setting a default value to the command-line argument.
+
+ -- Helia Correia <helia.correia@linux.intel.com>  Mon, 21 Mar 2016 09:09:37 +0100
+
 yoko-tools (1.1) trusty; urgency=low
 
   * Bug fix: Remove "arg" useless parameter since it would provoke the following error:
