Prepare for release 1.2
Completed the man page to reflect latest change.

Cleaned up the rpm changes file by removing a useless line
resulting from a copy/paste mistake.

Change-Id: I746fb5506d35bc158c71c6937bf6a6c280bcfb16
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -93,7 +93,7 @@ Print debugging information.
 
 .B -m, --devmodel
 .RS
-The power meter device model (e.g., wt310).
+The power meter device model (default value is wt310).
 .RE
 
 .B Supported commands
