--- a/docs/RELEASE_NOTES
+++ b/docs/RELEASE_NOTES
@@ -1,3 +1,21 @@
+Release 1.3
+~~~~~~~~~~~
+
+yoko-tools (1.3) trusty; urgency=low
+
+1. yokotool: fix integration start
+
+    Fix incorrect indentation introduced in:
+    80794a0 yokotool: check integration timer is > 0 when mode is "continuous"
+
+2. yokotool: BUG FIX: enable users to set an integration timer value
+
+    get_argument_help() usually returns the valid values for a property. So we used to rely on this
+    function to verify the data before assigning it to a property.
+    However, integration timer was an exception to that rule. With this patch we verify the timer
+    value against a range of integers instead of a help message.
+
+
 Release 1.2
 ~~~~~~~~~~~
 
