Improve naming consistency
Let's get back to use "data item" in place of "electrical quantity".

Change-Id: Idb3f4c9846019caae30ed787dc960a6b0fc97762
Signed-off-by: Helia Correia <helia.correia@linux.intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -299,9 +299,8 @@ the user manual of Yokogawa WT300 power meter series.
 
 The power meter supports 3 smoothing properties:
 
-- The smoothing \fBstatus\fP specifies if smoothing is switched \fBon\fP or
-\fBoff\fP. When smoothing is switched on, the measured electrical quantity
-is in fact a computed average value.
+- The smoothing \fBstatus\fP specifies if smoothing is switched \fBon\fP or \fBoff\fP.
+When smoothing is switched on, the measured data item is in fact a computed average value.
 
 - The smoothing \fBtype\fP can be set to \fBlinear\fP or \fBexponential\fP. This
 setting influences how smoothing is computed.
