--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -1,4 +1,4 @@
-.TH YOKOTOOL "1" "May 2016" "yoko-tools 1.3" "User Commands"
+.TH YOKOTOOL "1" "November 2016" "yoko-tools 1.4" "User Commands"
 
 
 .SH NAME
@@ -392,7 +392,7 @@ Client side - request to read voltage, current, and active power for 10 seconds
 
 .nf
 Artem Bityutskiy <artem.bityutskiy@linux.intel.com>.
-Helia Correia <helia.correia@intel.com>.
+Helia Correia <helia.correia@linux.intel.com>.
 .fi
 
 
