man page: mention wt330
Signed-off-by: Artem Bityutskiy <artem.bityutskiy@linux.intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -48,7 +48,8 @@ The power meter device node (e.g., /dev/usbtmc0).
 
 .B --pmtype TYPE
 .RS
-Type of the power meter. Use "wt310" for Yokogawa WT310 and "wt210" for Yokogawa WT210.
+Type of the power meter. Use "wt310" for Yokogawa WT310, "wt210" for Yokogawa
+WT210, and "wt332/wt333" for Yokogawa WT33x.
 .RE
 
 .B --baudrate RATE
