--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -1,3 +1,6 @@
+.\" -*- coding: utf-8 -*-
+.\" vim: ts=4 sw=4 tw=100 et ai si
+
 .TH YOKOTOOL "1" "November 2016" "yoko-tool 2.0" "User Commands"
 
 
