man: document the new --configure option
Change-Id: Id0bc59dbc7d34f64a46fceeae76113a3ec462462
Signed-off-by: Artem Bityutskiy <artem.bityutskiy@linux.intel.com>

--- a/docs/man1/yokotool.1
+++ b/docs/man1/yokotool.1
@@ -254,6 +254,13 @@ Execute zero-level compensation.
 .RS
 Reset to factory settings.
 .RE
+
+.B --configure
+.RS
+In addition to resetting the power meter, configure it with generally reasonable default settings.
+This way the initial power meter configuration will be similar across various Yokogawa power meter
+flavors.
+.RE
 .RE
 
 .SH AUTHORS
